crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_string_bool_query_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
	"strconv"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("GET /api/items", func(w http.ResponseWriter, r *http.Request) {
		sortBy := "name"
		if v := r.URL.Query().Get("sortBy"); v != "" {
			sortBy = v
		}
		ascending := true
		if v := r.URL.Query().Get("ascending"); v != "" {
			ascending, _ = strconv.ParseBool(v)
		}
		result, err := h.ListItems(sortBy, ascending)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
