crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_struct.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

// User is a registered user.
type User struct {
	Id   int64   `json:"id"`
	Name string  `json:"name"`
	Bio  *string `json:"bio"`
}
