crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_validate_contains_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"fmt"
	"strings"
)

type User struct {
	Id    int64  `json:"id"`
	Email string `json:"email"`
}

// Validate checks all field constraints for User.
func (s User) Validate() error {
	if !(strings.Contains(s.Email, "@") && (len(s.Email) > 3)) {
		return fmt.Errorf("email: constraint violated")
	}
	return nil
}
