crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_validate_nested_collections_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"fmt"
	"regexp"
)

var decimalRe = regexp.MustCompile(`^-?[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?$`)

var urlRe = regexp.MustCompile(`^[a-zA-Z][a-zA-Z0-9+.-]*:`)

var uuidRe = regexp.MustCompile(`^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$`)

type Address struct {
	Zip string `json:"zip"`
}

// Validate checks all field constraints for Address.
func (s Address) Validate() error {
	if !(len(s.Zip) == 5) {
		return fmt.Errorf("zip: constraint violated")
	}
	return nil
}

type Catalog struct {
	Ids       []string          `json:"ids"`
	Prices    map[string]string `json:"prices"`
	Tags      *[]string         `json:"tags"`
	Primary   Address           `json:"primary"`
	Revisions []Address         `json:"revisions"`
}

// Validate checks all field constraints for Catalog.
func (s Catalog) Validate() error {
	for _, e0 := range s.Ids {
		if !uuidRe.MatchString(e0) {
			return fmt.Errorf("ids: invalid uuid")
		}
	}
	for _, e0 := range s.Prices {
		if !decimalRe.MatchString(e0) {
			return fmt.Errorf("prices: invalid decimal")
		}
	}
	if s.Tags != nil {
		for _, e0 := range *s.Tags {
			if !urlRe.MatchString(e0) {
				return fmt.Errorf("tags: invalid url")
			}
		}
	}
	if err := s.Primary.Validate(); err != nil {
		return fmt.Errorf("primary: %w", err)
	}
	for _, e0 := range s.Revisions {
		if err := e0.Validate(); err != nil {
			return fmt.Errorf("revisions: %w", err)
		}
	}
	return nil
}
