crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_validate_recursive_struct_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"fmt"
	"regexp"
)

var uuidRe = regexp.MustCompile(`^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$`)

type Tree struct {
	Id       string `json:"id"`
	Children []Tree `json:"children"`
}

// Validate checks all field constraints for Tree.
func (s Tree) Validate() error {
	if !uuidRe.MatchString(s.Id) {
		return fmt.Errorf("id: invalid uuid")
	}
	for _, e0 := range s.Children {
		if err := e0.Validate(); err != nil {
			return fmt.Errorf("children: %w", err)
		}
	}
	return nil
}
