crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_validate_types.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"fmt"
)

type User struct {
	Id   int64  `json:"id"`
	Name string `json:"name"`
	Age  int64  `json:"age"`
}

// Validate checks all field constraints for User.
func (s User) Validate() error {
	if !((len(s.Name) > 0) && (len(s.Name) <= 100)) {
		return fmt.Errorf("name: constraint violated")
	}
	if !((s.Age >= 0) && (s.Age <= 150)) {
		return fmt.Errorf("age: constraint violated")
	}
	return nil
}
