crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_void_client.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"fmt"
	"net/http"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) DeleteUser(id string) error {
	u := fmt.Sprintf("%s/api/users/%s", c.BaseURL, id)
	req, err := http.NewRequest("DELETE", u, nil)
	if err != nil {
		return err
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	return nil
}
